--- a/PI-Dogs-main/client/src/components/card/Card.module.css
+++ b/PI-Dogs-main/client/src/components/card/Card.module.css
@@ -1,7 +1,17 @@
+.cardWrapper {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1rem;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
 .card {
     display: flex;
     flex-direction: column;
-    max-width: 400px;
+    justify-content: center;
+    max-width: 100%;
     width: 100%;
     border: 0.2rem solid rgba( 210, 210, 210, 0.9);
     background-color: rgba( 60, 60, 60, 0.2);
@@ -14,19 +24,14 @@
     cursor: pointer;
 }
 
-.cardWrapper {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    width: 100%;
-    max-width: 1080px;
-    flex-wrap: wrap;
-}
 
 .text {
-    display: flex;
-    justify-content: center;
+    text-align: center;
     margin: 2px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
 }
 
 .temper {
@@ -40,6 +45,71 @@
 
 .image {
     object-fit: cover;
-    height: 250px;
+    height: 150px;
+    width: 100%;
     border-radius: 8px;
+}
+
+.loader {
+    font-size: 10px;
+    margin: 50px auto;
+    text-indent: -9999em;
+    width: 11em;
+    height: 11em;
+    border-radius: 50%;
+    background: #231f1f;
+    background: -moz-linear-gradient(left, #231f1f 10%, rgba(35,31,31, 0) 42%);
+    background: -webkit-linear-gradient(left, #231f1f 10%, rgba(35,31,31, 0) 42%);
+    background: -o-linear-gradient(left, #231f1f 10%, rgba(35,31,31, 0) 42%);
+    background: -ms-linear-gradient(left, #231f1f 10%, rgba(35,31,31, 0) 42%);
+    background: linear-gradient(to right, #231f1f 10%, rgba(35,31,31, 0) 42%);
+    position: relative;
+    -webkit-animation: load3 1.4s infinite linear;
+    animation: load3 1.4s infinite linear;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    }
+    .loader:before {
+    width: 50%;
+    height: 50%;
+    background: #231f1f;
+    border-radius: 100% 0 0 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: '';
+    }
+    .loader:after {
+    background: #fcd7b9;
+    width: 75%;
+    height: 75%;
+    border-radius: 50%;
+    content: '';
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    }
+    @-webkit-keyframes load3 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+    }
+    @keyframes load3 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
