--- a/PI-Dogs-main/client/src/pages/landingPage/LandingPage.module.css
+++ b/PI-Dogs-main/client/src/pages/landingPage/LandingPage.module.css
@@ -8,6 +8,7 @@
 .title {
     display: flex;
     justify-content: center;
+    -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
 }
 
 .btn {
