--- a/PI-Dogs-main/client/src/index.css
+++ b/PI-Dogs-main/client/src/index.css
@@ -1,7 +1,9 @@
 body {
   display: flex;
   justify-content: center;
-  background-color: rgb(252, 215, 185);
+  background-color: #350048;
+  margin-top: 30px;
+  margin-bottom: 0px;
   font-family: -apple-system,'Poppins', sans-serif, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
