--- a/PI-Dogs-main/client/src/components/card/Card.module.css
+++ b/PI-Dogs-main/client/src/components/card/Card.module.css
@@ -1,54 +1,206 @@
 .cardWrapper {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
 }
 
-.card {
+.box {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    max-width: 100%;
-    width: 100%;
-    border: 0.2rem solid rgba( 210, 210, 210, 0.9);
-    background-color: rgba( 60, 60, 60, 0.2);
-    border-radius: 8px;
-    transition: 900ms;
+    width: 400px;
+    height: 400px;
+    background-color: rgba( 0, 0, 0, 0.5);
+    border-radius: 50%;
+    overflow: hidden;
 }
 
-.card:hover {
-    border: 0.2rem solid rgba(60, 60, 60, 1);
+.box::before {
+    content: '';
+    position: absolute;
+    inset: -10px 140px;
+    background: linear-gradient(315deg, #00ccff, #d400d4);
+    transition: 0.5s;
+    animation: animate 4s linear infinite;
+}
+
+.box:hover::before {
+    inset: -20px 0px;
+}
+
+@keyframes animate 
+{
+    0%
+    {
+        transform: rotate(0deg);
+    }
+    100%
+    {
+        transform: rotate(360deg);
+    }
+}
+
+.box::after {
+    content: '';
+    position: absolute;
+    inset: 6px;
+    background: #162052;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+.content {
+    position: absolute;
+    inset: 30px;
+    border: 6px solid #070a1c;
+    z-index: 3;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.content .image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: 0.5s;
+    pointer-events: none;
+    z-index: 3;
+}
+
+.box:hover .content .image {
+    opacity: 0;
+}
+
+.content .text {
+    position: relative;
+    font-size: 20px;
+    text-align: center;
+    color: #d400d4;
+    font-weight: 600;
+    letter-spacing: 0.05em;
+    width: 300px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-transform: uppercase;
+}
+
+.content .text .span3 {
+    font-weight: 300;
+    font-size: 0.75em;
+}
+
+.none {
+    text-decoration: none;
+}
+
+.content .btn2
+{
+    position: relative;
+    margin-top: 10px;
+    padding: 10px 20px;
+    background: #00ccff;
+    color: #d400d4;
+    border-radius: 25px;
+    font-weight: 500;
+    font-size: 1.25em;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    transition: 0.5s;
+}
+
+.content .btn2:hover
+{
+    letter-spacing: 0.2em;
     cursor: pointer;
 }
 
 
-.text {
+
+
+
+
+
+
+
+
+
+
+
+
+/* .card:hover {
+    border: 0.2rem solid rgba(60, 60, 60, 1);
+    cursor: pointer;
+} */
+
+
+/* .text {
     text-align: center;
     margin: 2px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     width: 100%;
-}
+} */
 
-.temper {
+/* .temper {
     display: inline-block;
     margin: 0 auto;
     width: 180px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-}
+} */
 
-.image {
+/* .image {
     object-fit: cover;
     height: 150px;
     width: 100%;
     border-radius: 8px;
-}
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .loader {
 color: #1ac0ea;
