--- a/PI-Dogs-main/client/src/pages/details/Details.module.css
+++ b/PI-Dogs-main/client/src/pages/details/Details.module.css
@@ -1,3 +1,21 @@
+.detalle
+{   
+    display: flex;
+    justify-content: center;
+    color: #d400d4;
+    text-transform: uppercase;
+}
+
+.prop
+{
+    color: #d400d4;
+}
+
+.span
+{
+    color: #00ccff;
+}
+
 .box {
     position: relative;
     display: flex;
@@ -46,10 +64,97 @@
 }
 
 
+/* CSS para DELETE BUTTON */
 
+.divDelete
+{
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+}
 
+.btn
+{
+    position: relative;
+    width: 160px;
+    height: 60px;
+    background: #162052;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    text-decoration: none;
+    border: none;
+}
 
+.btn:hover
+{
+    cursor: pointer;
+}
 
+.btn .span6
+{
+    position: absolute;
+    left: 30px;
+    top: 22px;
+    width: 18px;
+    height: 20px;
+    display: inline-block;
+    background: #fff;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    transition: 0.5s;
+}
+
+.btn:hover .span6 
+{
+    transform: scale(2.4) rotate(60deg) translateY(10px);
+    cursor: pointer;
+}
+
+.btn .span6::before
+{
+    content: '';
+    position: absolute;
+    top: -3px;
+    right: 0px;
+    width: 100%;
+    height: 2px;
+    background: #fff;
+    box-shadow: 12px -2px 0 #162052,
+    12px -3px 0 #162052,
+    15px -1px 0 #162052,
+    6px -2px 0 #fff;
+    transition: 0.5s;
+}
+
+.btn:hover .span6::before
+{
+    transform: rotate(-90deg) translateX(50%) translateY(-10px);
+}
+
+.btn .text 
+{
+    position: absolute;
+    right: 10px;
+    top: 20px;
+    color: #fff;
+    transition: 0.5s;
+    font-size: 18px;
+}
+
+.text:hover
+{
+    cursor: pointer;
+}
+
+.btn:hover .text
+{
+    transform: translateX(-80px) translateY(-5px) scale(0);
+}
 
 
 .loader {
