--- a/PI-Dogs-main/client/src/components/createDogs/CreateDogs.module.css
+++ b/PI-Dogs-main/client/src/components/createDogs/CreateDogs.module.css
@@ -1,3 +1,9 @@
+.divbtn
+{
+    display: flex;
+    justify-content: center;
+}
+
 .btn 
 {
     position: relative;
@@ -8,6 +14,8 @@
     transition: 0.5s;
     border: none;
     letter-spacing: 3px;
+    font-size: 30px;
+    border-top: 1px solid #1f53c5;
 }
 
 .btn:hover
@@ -15,6 +23,7 @@
     background: #d400d4;
     color: #d400d4;
     box-shadow: 0 0 35px #d400d4;
+    letter-spacing: 4px;
 }
 
 .btn::before
@@ -76,10 +85,78 @@
     left: 80%;
 }
 
+/* Titulo */
+.h3 {
+    display: flex;
+    justify-content: center;
+    -webkit-box-reflect: below -48px linear-gradient(transparent, #0004);
+    color: transparent;
+    font-size: 10vh;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    text-transform: uppercase;
+}
+
+.h3 .span10
+{
+    animation: animate 3s linear infinite;
+    animation-delay: 0.1s;
+}
+
+@keyframes animate
+{
+    0%
+    {
+        color: #fff;
+        filter: blur(2px) hue-rotate(0deg);
+        text-shadow: 0 0 10px #00b3ff,
+        0 0 20px #00b3ff,
+        0 0 40px #00b3ff,
+        0 0 80px #00b3ff,
+        0 0 120px #00b3ff,
+        0 0 200px #00b3ff,
+        0 0 300px #00b3ff,
+        0 0 400px #00b3ff;
+    }
+    30%, 70%
+    {
+        color: #fff;
+        filter: blur(2px) hue-rotate(360deg);
+        text-shadow: 0 0 10px #00b3ff,
+        0 0 20px #00b3ff,
+        0 0 40px #00b3ff,
+        0 0 80px #00b3ff,
+        0 0 120px #00b3ff,
+        0 0 200px #00b3ff;
+    }
+    100%
+    {
+        color: transparent;
+        box-shadow: none;
+        filter: blur(2px) hue-rotate(0deg);
+    }
+}
+
 /* FORMULARIO */
 
 .form
 {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    width: 800px;
+    padding: 30px;
+    margin-top: 0px;
+    border-radius: 4px;
+    font-family: 'calibri';
+    color: #fff;
+}
+
+.input
+{
+    width: 100%;
+    background-color: #24303c;
+    border: 1px solid #1f53c5;
+    padding: 10px;
+    border-radius: 4px;
+    margin-bottom: 16px;
+    font-family: 'calibri';
+    font-size: 18px;
 }
